unitas-rs/pattern-macro/tests/compile_fails/empty_pattern.rs
use pattern_macro::pattern;

fn main() {
    pattern!(0, "");
}
